feat: 멤버강퇴 api #67
